--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "nodemailer": "^6.9.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-calendar": "^4.6.0",
+    "react-clock": "^4.5.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^5.3.4",
