--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "font-awesome": "^4.7.0",
     "framer-motion": "^10.16.1",
+    "google-translate-api": "^2.3.0",
     "nodemailer": "^6.9.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
